# TicTacToeAI

./: CMakeLists.txt  README.md  main.cpp  tttAI.cpp  tttAI.h  tttBoard.cpp  tttBoard.h
TicTacToeAI/: AI.h  Board.h  CMakeLists.txt  GUI.h  Interface.h  Player.h  Settings.h  main.cpp
